@@ -1,6 +1,13 @@
 Next release
 ============
 
+- The ``registry_manager`` backwards compatibility alias importable
+  from "repoze.bfg.registry", deprecated since repoze.bfg 0.9 has been
+  removed.  If you are tring to use the registry manager within a
+  debug script of your own, use a combination of the
+  "repoze.bfg.paster.get_app" and "repoze.bfg.scripting.get_root" APIs
+  instead.
+
 - The ``IViewPermissionFactory`` interface has been removed.  This was
   never an API.
 
